# evsy

./: CMakeLists.txt  LICENSE
examples/: CMakeLists.txt  multiplehandlers.cc  simple.cc
include/evsy/: EventHandler.hh  EventSource.hh
